charts/templates/hello-project.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-07-02T23:29:08Z"
  generation: 1
  labels:
    run: hello-project
  name: hello-project
  namespace: default
  resourceVersion: "7055"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/hello-project
  uid: 30672ccb-9d21-11e9-955e-b6d2bfa58c7c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: hello-project
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: hello-project
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: hello-project
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-07-02T23:29:19Z"
    lastUpdateTime: "2019-07-02T23:29:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-07-02T23:29:08Z"
    lastUpdateTime: "2019-07-02T23:29:19Z"
    message: ReplicaSet "hello-project-66dc7c9495" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
